# RobRoss

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  Rob_Ross.md  Rob_Ross_Discuss.md  Rob_Ross_Prototype_v1.md  Roles_Collaboration.md  generate_output_gallery.py  requirements.txt  rob_Ross_Overview.md
.claude/: launch.json
CAD/: 17mm Rubber Metal Insert.step  README.md
Image_Process/: README.md
aruco/: aruco_drawing_area.py
configs/: demo_v1_a4_pen.json  gemini_mondrian_demo_a4.json  gemini_mondrian_lenna_a4.json  gemini_mondrian_man_a4.json  image_to_mondrian_demo_a4.json  image_to_mondrian_lenna_a4.json  image_to_mondrian_minions_a4.json  line_art_ai_a4.json  line_art_demo_a4.json  mondrian_12x12_paint.json  sketch_demo_a4.json
docs/: Rob_Ross_Prototype_v1.md  aubo-painting-tracking-remediation-plan.md  hardware-first-run-guide.md  hardware-test-checklist.md  painting-executor-motion-translation.md  painting-paths-format.md
handeye_calibration/: README.md  README_EN.md  aruco_drawing_area.py  calibrate_camera.py  calibrate_handeye.py  camera_calib.json  handeye_calibration_guide.md  handeye_calibration_guide_EN.md  read_realsense_intrinsics.py  requirements.txt  start_painting.sh
output/: arm_tracking_curve_test_paths.json  arm_tracking_direction_test_paths.json  arm_tracking_reversal_test_paths.json  curve_test_paths.json  hinton_robot_path.json  image_to_mondrian_lenna_painting_paths.json  image_to_mondrian_minions_painting_paths.json  image_to_mondrian_painting_paths.json  index.html  logo_paths.json  logo_paths_prev.json  painting_paths.json  painting_plan.json  sine_test_paths.json  sketch_painting_paths.json  test_line_2.json  test_line_paths.json
robross_phase2_20260724_144321/: canvas_calibration_20mm_above.yaml  contact_canvas_source.yaml  contact_hardware_source.yaml  real_hardware_servoj_warning_analysis.md  source_revisions.txt  trial_a_controller_manager.yaml  trial_a_joint_trajectory_controller.yaml  trial_a_servoj.csv  trial_a_start_joint_states.yaml  trial_a_summary.md  trial_a_tracking.csv  trial_a_update_rate.txt  trial_b_controller_manager.yaml  trial_b_joint_trajectory_controller.yaml  trial_b_servoj.csv  trial_b_start_joint_states.yaml  trial_b_summary.md  trial_b_tracking.csv  trial_b_update_rate.txt
ros2/: robross_aubo.repos
ros2/robross_painter/: CMakeLists.txt  PREFLIGHT.md  README.md  REFERENCE.md  package.xml
ros2/robross_painter/config/: demo_v1_rviz.yaml  hardware_a4.yaml  hardware_wall_a4.yaml  rviz_taught_a4.yaml  rviz_wall_a4.yaml
ros2/robross_painter/launch/: paint.launch.py  teach_nudge.launch.py
ros2/robross_painter/scripts/: analyze_tracking_bag.py  teach_canvas.py  teach_tcp.py
ros2/robross_painter/src/: cartesian_postprocess.hpp  painting_executor.cpp  teach_nudge.cpp
ros2/robross_painter/test/: test_analyze_tracking_bag.py  test_cartesian_postprocess.cpp  test_paint_launch.py  test_teach_canvas_math.py  test_teach_tcp_math.py
scripts/: README.md  canny.py  config_loader.py  generate_painting_paths.py  generate_test_line.py  mondrian_generator.py  mondrian_path_preview.py  mondrian_robot_path.py  path_ordering.py  path_validation.py  robot_path.py  (+1 more)
(+183 files in other folders)
